@@ -15,7 +15,9 @@ Revision history for Perl module Math::Prime::Util
       quadmath there should be no change.  With quadmath functions like
       LogarithmicIntegral and LambertW will be slower but more accurate.
 
-    - semiprime_count for non-trivial inputs uses a segmented sieve.
+    - semiprime_count for non-trivial inputs uses a segmented sieve and
+      precalculates primes for larger values so can run 2-3x faster.
+
 
 0.71 2018-08-28
 
